--- a/grocery.css
+++ b/grocery.css
@@ -4,6 +4,8 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgb(252,152,100);
+    min-width: 400px;
+    min-height: 400px;
     
 }
 tr {
