--- a/grocery.css
+++ b/grocery.css
@@ -1,7 +1,7 @@
 body {
     background-size: cover;
     background-attachment: fixed;
-   
+   background-repeat: no-repeat;
     background-color: rgb(252,152,100);
     min-width: 400px;
     min-height: 400px;
